--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JRE [1.7.0_45]"/>
 	<classpathentry kind="lib" path="/Users/danny/Documents/Posibles rar a utilizar/jsoup-1.7.3.jar"/>
 	<classpathentry kind="lib" path="/Users/danny/Documents/Posibles rar a utilizar/itextpdf-5.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/danny/Documents/Posibles rar a utilizar/jxl.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
