--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/Users/danny/git/ULE-Bank-assets-Step4/Lib/itextpdf-5.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/danny/git/ULE-Bank-assets-Step4/Lib/jcalendar-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/Users/danny/git/ULE-Bank-assets-Step4/Lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/danny/git/ULE-Bank-assets-Step4/Lib/jsoup-1.7.3.jar"/>
+	<classpathentry kind="lib" path="/Users/danny/git/ULE-Bank-assets-Step4/Lib/jxl.jar"/>
+	<classpathentry kind="lib" path="/Users/danny/git/ULE-Bank-assets-Step4/Lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
