--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <artifactId>springapp_v1</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>springapp_v1 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -100,6 +99,11 @@
     	<artifactId>spring-boot-starter-remote-shell</artifactId>
     	<version>1.0.0.RELEASE</version>
     </dependency>
+    <dependency>
+    	<groupId>javax.ejb</groupId>
+    	<artifactId>javax.ejb-api</artifactId>
+    	<version>3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>springapp_v1</finalName>
@@ -107,4 +111,5 @@
   <properties>
   	<org.springframework.version>4.0.4.RELEASE</org.springframework.version>
   </properties>
+  <name>springapp_v1</name>
 </project>
